tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__python_decorator.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
@property
def value(self):
    # Return the stored value
    return self._value

@value.setter
def value(self, val):
    self._value = val  # Store the value

# text_to_type
@property
def value(self):
# Return the stored value
return self._value
@value.setter
def value(self, val):
self._value = val  # Store the value

# text_to_display
@property↵
def value(self):↵
    # Return the stored value↵
    return self._value↵

@value.setter↵
def value(self, val):↵
    self._value = val  # Store the value↵
