tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__python_function_with_comment.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
def greet(name):
    print(f"Hello {name}")  # Print greeting
    return name

# text_to_type
def greet(name):
print(f"Hello {name}")  # Print greeting
return name

# text_to_display
def greet(name):↵
    print(f"Hello {name}")  # Print greeting↵
    return name↵
