tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__python_function_with_docstring.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
def factorial(n):
    """Calculate factorial of n"""
    if n <= 1:
        return 1
    return n * factorial(n - 1)  # Recursive call

# text_to_type
def factorial(n):
"""Calculate factorial of n"""
if n <= 1:
return 1
return n * factorial(n - 1)  # Recursive call

# text_to_display
def factorial(n):↵
    """Calculate factorial of n"""↵
    if n <= 1:↵
        return 1↵
    return n * factorial(n - 1)  # Recursive call↵
