tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__ruby_class_with_comments.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
class Calculator
  def initialize
    @result = 0 # Initialize result
  end
  
  def add(value) # Add method
    @result += value
    self
  end
  
  def result
    @result # Return current result
  end
end

# text_to_type
class Calculator
def initialize
@result = 0 # Initialize result
end
def add(value) # Add method
@result += value
self
end
def result
@result # Return current result
end
end

# text_to_display
class Calculator↵
  def initialize↵
    @result = 0 # Initialize result↵
  end↵
  
  def add(value) # Add method↵
    @result += value↵
    self↵
  end↵
  
  def result↵
    @result # Return current result↵
  end↵
end↵
