tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__ruby_method_with_comment.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
def add(a, b)
  a + b # Return sum
end

# text_to_type
def add(a, b)
a + b # Return sum
end

# text_to_display
def add(a, b)↵
  a + b # Return sum↵
end↵
